# wezterm

./: CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: docs.md
.github/workflows/: gen_centos9.yml  gen_centos9_continuous.yml  gen_centos9_tag.yml  gen_debian12.yml  gen_debian12_continuous.yml  gen_debian12_tag.yml  gen_fedora41.yml  gen_fedora41_continuous.yml  gen_fedora41_tag.yml  gen_macos.yml  gen_macos_continuous.yml  gen_macos_tag.yml  gen_ubuntu22.04.yml  gen_ubuntu22.04_continuous.yml  gen_ubuntu22.04_tag.yml  gen_ubuntu24.04.yml  gen_ubuntu24.04_continuous.yml  gen_ubuntu24.04_tag.yml  gen_windows.yml  gen_windows_continuous.yml  gen_windows_tag.yml  nix-build.yml  nix-continuous.yml  nix-update-flake.yml  no-response.yml
assets/shell-completion/: fish  zsh
ci/: deploy.sh  generate-workflows.py
config/src/: config.rs  keyassignment.rs  lib.rs  tmux.rs  version.rs
docs/: changelog.md  faq.md  help.md
docs/config/lua/: PaneInformation.md  TabInformation.md
docs/config/lua/config/: default_ssh_auth_sock.md  quick_select_alphabet.md  tmux_format_subscriptions.md
docs/config/lua/keyassignment/: QuickSelect.md  QuickSelectArgs.md
docs/config/lua/wezterm.color/: load_base16_scheme.md  load_scheme.md  load_terminal_sexy_scheme.md
docs/examples/: cmd-synopsis-wezterm-cli-get-text--help.txt
docs/install/: linux.md  source.md
lua-api-crates/termwiz-funcs/src/: lib.rs  tmux_style.rs
mux/: Cargo.toml
mux/src/: lib.rs  localpane.rs  pane.rs  tab.rs  tmux.rs  tmux_commands.rs  tmux_layout.rs
nix/: flake.nix
procinfo/src/: linux.rs  macos.rs  windows.rs
pty/src/win/: mod.rs
term/src/terminalstate/: image.rs  mod.rs  performer.rs
term/src/test/: image.rs  mod.rs
wezterm-escape-parser/src/tmux_cc/: mod.rs
wezterm-gui/src/: commands.rs  uniforms.rs
wezterm-gui/src/overlay/: quickselect.rs
wezterm-gui/src/termwindow/: mod.rs
wezterm-input-types/src/: lib.rs
(+10 files in other folders)
